package com.warmhouseyandex.heat_service.api;

import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/api/v1/test")
public class LoadDataController {

    @GetMapping("/")
    public String test() {
        return "Hello there!";
    }
    
}
